Fix issue/bug with button/links to Athletics YT channel...
When I added the new buttons linking to the Athletics YouTube channel,
I didn't catch that they where unclickable--obscured by an invisible element over top them.

Fixed by removing the `position: absolute;` used on the element holding the schedule-key and button.
(The absolute positioning was an aesthetic fix to lessen the gap between the table and the key.)

--- a/assets/scss/4-layout/_key.scss
+++ b/assets/scss/4-layout/_key.scss
@@ -16,9 +16,3 @@
   line-height: 2.25;
 }
 
-@media screen and (min-width: 992px) {
-  .key__p {
-    // absolute positioning takes a block-level element out of the page/DOM flow.
-    position: absolute; // Move the key down into the table area by removing it from page flow.
-  }
-}
